# Unit-test project for FrameLift's platform-independent logic.
#
# Dual-mode:
#   • Standalone (CI):   cmake -S tests -B build-tests   — native compiler, no SDL/FFmpeg.
#   • In-tree (IDE/dev): the root CMakeLists `add_subdirectory(tests)` when
#     FRAMELIFT_BUILD_TESTS is ON, so the suite shows up in the solution/CMake view.
#
# The pure-logic suite (framelift_tests) compiles only standalone units. Plugin behaviour
# suites compile a single module entry .cpp each (one exe per package; each emits
# framelift_create/etc., so two in one binary would clash) plus the SDK helper sources.
if (CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
    cmake_minimum_required(VERSION 3.28)
    project(FrameLiftTests LANGUAGES CXX)
endif ()

include(FetchContent)
FetchContent_Declare(
        googletest
        GIT_REPOSITORY https://github.com/google/googletest.git
        GIT_TAG v1.15.2
        GIT_SHALLOW TRUE
)
# Match the test exe's CRT on MSVC (no effect on GCC/Clang).
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

# JSON — needed by plugins that persist data (History).
FetchContent_Declare(
        nlohmann_json
        GIT_REPOSITORY https://github.com/nlohmann/json.git
        GIT_TAG v3.11.3
        GIT_SHALLOW TRUE
)
set(JSON_BuildTests OFF CACHE INTERNAL "")
FetchContent_MakeAvailable(nlohmann_json)

enable_testing()
include(GoogleTest)
find_package(Threads REQUIRED)

set(FRAMELIFT_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/..")
set(FRAMELIFT_GRAPHICS_TEST_INCLUDE_DIRS
        "${FRAMELIFT_ROOT}/modules/gfx/graphics-core"
        "${FRAMELIFT_ROOT}/modules/gfx/opengl"
        "${FRAMELIFT_ROOT}/modules/gfx/vulkan"
)
set(FRAMELIFT_MEDIA_TEST_INCLUDE_DIRS
        "${FRAMELIFT_ROOT}/modules/media/ffmpeg"
)
set(FRAMELIFT_HOST_MODULE_TEST_INCLUDE_DIRS
        "${FRAMELIFT_ROOT}/modules/host/plugin-runtime"
        "${FRAMELIFT_ROOT}/modules/host/settings"
        "${FRAMELIFT_ROOT}/modules/host/services"
        "${FRAMELIFT_ROOT}/modules/host/read-ahead"
        "${FRAMELIFT_ROOT}/modules/host/ui"
        "${FRAMELIFT_ROOT}/modules/platform/window-sdl"
        "${FRAMELIFT_ROOT}/modules/platform/dir-watch"
)

# ── Coverage (gcov/gcovr) ─────────────────────────────────────────────────────
option(FRAMELIFT_COVERAGE "Instrument the tests for gcov/gcovr coverage" OFF)
function(framelift_apply_coverage tgt)
    if (FRAMELIFT_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
        target_compile_options(${tgt} PRIVATE --coverage -O0 -g)
        target_link_options(${tgt} PRIVATE --coverage)
    endif ()
endfunction()

# SDK helper sources compiled into every plugin (and thus every plugin test).
set(FRAMELIFT_SDK_TEST_SOURCES
        "${FRAMELIFT_ROOT}/sdk/src/ModuleBase.cpp"
        "${FRAMELIFT_ROOT}/sdk/src/Panel.cpp"
        "${FRAMELIFT_ROOT}/sdk/src/Widgets.cpp"
        "${FRAMELIFT_ROOT}/sdk/src/KeyNames.cpp"
        "${FRAMELIFT_ROOT}/sdk/src/Log.cpp"
)

# ── framelift_tests: pure-logic + platform-builder suites (no package entry symbols) ─
add_executable(framelift_tests
        CliTests.cpp
        SettingsTests.cpp
        PluginContextTests.cpp
        PluginSettingsTests.cpp
        FocusManagerTests.cpp
        KeyNamesTests.cpp
        SemVerTests.cpp
        PluginAbiTests.cpp
        PluginResolverTests.cpp
        UrlUtilsTests.cpp
        ExtensionFilterTests.cpp
        FFmpegFiltersTests.cpp
        MediaEventTests.cpp
        SettingsMappingTests.cpp
        ReadAheadCacheTests.cpp
        ThemeUtilTests.cpp
        FontScanTests.cpp
        FFmpegClockTests.cpp
        FFmpegHwDecodeTests.cpp
        FFmpegLetterboxTests.cpp
        GraphicsApiTests.cpp
        FFmpegSubtitleBlendTests.cpp
        FFmpegTrackLabelTests.cpp
        VulkanQueueLockTests.cpp
        "${FRAMELIFT_ROOT}/modules/host/settings/Settings.cpp"
        "${FRAMELIFT_ROOT}/modules/host/plugin-runtime/PluginContext.cpp"
        "${FRAMELIFT_ROOT}/modules/host/plugin-runtime/PluginResolver.cpp"
        "${FRAMELIFT_ROOT}/modules/host/services/FontScan.cpp"
        "${FRAMELIFT_ROOT}/sdk/src/KeyNames.cpp"
)
set_target_properties(framelift_tests PROPERTIES
        CXX_STANDARD 23 CXX_STANDARD_REQUIRED ON CXX_EXTENSIONS OFF)
target_include_directories(framelift_tests PRIVATE
        "${FRAMELIFT_ROOT}/sdk/include"
        "${FRAMELIFT_ROOT}/src"
        ${FRAMELIFT_GRAPHICS_TEST_INCLUDE_DIRS}
        ${FRAMELIFT_MEDIA_TEST_INCLUDE_DIRS}
        ${FRAMELIFT_HOST_MODULE_TEST_INCLUDE_DIRS}
        "${FRAMELIFT_ROOT}/plugins/updater/core"
        "${FRAMELIFT_ROOT}/plugins/playlist/core"
)
target_link_libraries(framelift_tests PRIVATE GTest::gtest_main GTest::gmock Threads::Threads)
framelift_apply_coverage(framelift_tests)
gtest_discover_tests(framelift_tests)

add_executable(framelift_tests_vulkan_off
        VulkanModuleDisabledTests.cpp
)
set_target_properties(framelift_tests_vulkan_off PROPERTIES
        CXX_STANDARD 23 CXX_STANDARD_REQUIRED ON CXX_EXTENSIONS OFF)
target_compile_definitions(framelift_tests_vulkan_off PRIVATE FRAMELIFT_MODULE_GRAPHICS_VULKAN=0)
target_include_directories(framelift_tests_vulkan_off PRIVATE
        "${FRAMELIFT_ROOT}/sdk/include"
        "${FRAMELIFT_ROOT}/src"
        ${FRAMELIFT_GRAPHICS_TEST_INCLUDE_DIRS}
        ${FRAMELIFT_MEDIA_TEST_INCLUDE_DIRS}
        ${FRAMELIFT_HOST_MODULE_TEST_INCLUDE_DIRS}
)
target_link_libraries(framelift_tests_vulkan_off PRIVATE GTest::gtest_main Threads::Threads)
framelift_apply_coverage(framelift_tests_vulkan_off)
gtest_discover_tests(framelift_tests_vulkan_off)

# ── Helper: one test exe per plugin ───────────────────────────────────────────
# add_framelift_plugin_test(NAME [EMIT_MODULE_ENTRY] [METADATA_HEADER <header>] <test.cpp> <plugin.cpp> [extra .cpp]...)
function(add_framelift_plugin_test name)
    cmake_parse_arguments(_FL_TEST "EMIT_MODULE_ENTRY" "METADATA_HEADER" "" ${ARGN})
    if (NOT _FL_TEST_METADATA_HEADER)
        set(_FL_TEST_METADATA_HEADER "TestPluginMetadata.h")
    endif ()
    add_executable(${name} ${_FL_TEST_UNPARSED_ARGUMENTS} ${FRAMELIFT_SDK_TEST_SOURCES})
    set_target_properties(${name} PROPERTIES
            CXX_STANDARD 23 CXX_STANDARD_REQUIRED ON CXX_EXTENSIONS OFF)
    target_compile_definitions(${name} PRIVATE
            FRAMELIFT_BUILDING_PLUGIN
            FRAMELIFT_PLUGIN_METADATA_HEADER="${_FL_TEST_METADATA_HEADER}")
    if (NOT _FL_TEST_EMIT_MODULE_ENTRY)
        target_compile_definitions(${name} PRIVATE FRAMELIFT_SUPPRESS_MODULE_ENTRY)
    endif ()
    target_include_directories(${name} PRIVATE
            "${FRAMELIFT_ROOT}/sdk/include"
            "${FRAMELIFT_ROOT}/src"
            ${FRAMELIFT_GRAPHICS_TEST_INCLUDE_DIRS}
            ${FRAMELIFT_MEDIA_TEST_INCLUDE_DIRS}
            ${FRAMELIFT_HOST_MODULE_TEST_INCLUDE_DIRS}
            "${FRAMELIFT_ROOT}/tests"
            "${FRAMELIFT_ROOT}/tests/stubs"  # stub IconData.h / Version.h for plugins that need generated headers
            "${FRAMELIFT_ROOT}/plugins/playlist/core"
            "${FRAMELIFT_ROOT}/plugins/history/core"
            "${FRAMELIFT_ROOT}/plugins/settings-menu/core"
            "${FRAMELIFT_ROOT}/plugins/overlay/core"
            "${FRAMELIFT_ROOT}/plugins/debug-overlay/core"
            "${FRAMELIFT_ROOT}/plugins/benchmark/core"
            "${FRAMELIFT_ROOT}/plugins/remote-stream/core"
    )
    target_link_libraries(${name} PRIVATE
            GTest::gtest_main GTest::gmock Threads::Threads nlohmann_json::nlohmann_json)
    framelift_apply_coverage(${name})
    gtest_discover_tests(${name})
endfunction()

# ── Module entry suites ───────────────────────────────────────────────────────
# Each invokes FRAMELIFT_MODULE_ENTRY on a dummy module entry and calls the generated
# extern "C" entry points directly — two exes because the C symbols would clash.
add_framelift_plugin_test(framelift_test_module_entry
        EMIT_MODULE_ENTRY
        METADATA_HEADER "TestRenderingPluginMetadata.h"
        ModuleEntryTests.cpp)

add_framelift_plugin_test(framelift_test_module_entry_norender
        EMIT_MODULE_ENTRY
        METADATA_HEADER "TestNoRenderPluginMetadata.h"
        ModuleEntryNoRenderTests.cpp)

# ── Per-plugin behaviour suites ───────────────────────────────────────────────
add_framelift_plugin_test(framelift_test_history
        HistoryTests.cpp
        "${FRAMELIFT_ROOT}/plugins/history/core/History.cpp")

# Playlist + SettingsMenu drive the real PluginContext, so they also compile
# the host plugin runtime and settings modules.
add_framelift_plugin_test(framelift_test_playlist
        PlaylistTests.cpp
        "${FRAMELIFT_ROOT}/plugins/playlist/core/Playlist.cpp"
        "${FRAMELIFT_ROOT}/modules/host/plugin-runtime/PluginContext.cpp"
        "${FRAMELIFT_ROOT}/modules/host/services/FontScan.cpp"
        "${FRAMELIFT_ROOT}/modules/host/settings/Settings.cpp")

add_framelift_plugin_test(framelift_test_settingsmenu
        SettingsMenuTests.cpp
        "${FRAMELIFT_ROOT}/plugins/settings-menu/core/SettingsMenu.cpp"
        "${FRAMELIFT_ROOT}/modules/host/plugin-runtime/PluginContext.cpp"
        "${FRAMELIFT_ROOT}/modules/host/services/FontScan.cpp"
        "${FRAMELIFT_ROOT}/modules/host/settings/Settings.cpp")

add_framelift_plugin_test(framelift_test_overlay
        OverlayTests.cpp
        "${FRAMELIFT_ROOT}/plugins/overlay/core/Overlay.cpp")

add_framelift_plugin_test(framelift_test_debugoverlay
        DebugOverlayTests.cpp
        "${FRAMELIFT_ROOT}/plugins/debug-overlay/core/DebugOverlay.cpp")

add_framelift_plugin_test(framelift_test_benchmark
        BenchmarkTests.cpp
        "${FRAMELIFT_ROOT}/plugins/benchmark/core/Benchmark.cpp"
        "${FRAMELIFT_ROOT}/plugins/benchmark/core/SysStats.cpp")
if (WIN32)
    target_link_libraries(framelift_test_benchmark PRIVATE pdh)
endif ()

add_framelift_plugin_test(framelift_test_remotestream
        RemoteStreamTests.cpp
        "${FRAMELIFT_ROOT}/plugins/remote-stream/core/RemoteStream.cpp")
